maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:83: error: illegal start of simple expression
    }
    ^